<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.ask.AskActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/biggerMargin"
        android:paddingRight="@dimen/biggerMargin"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/help_input"
            android:layout_marginTop="5dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/titleMessageEditText"
                style="@style/askEditStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintInput" />
        </android.support.design.widget.TextInputLayout>

        <ProgressBar
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textProgressBar"
            android:visibility="invisible"
            android:layout_alignTop="@id/help_input"
            android:layout_alignBottom="@id/help_input"
            android:layout_alignEnd="@id/help_input" />
    </RelativeLayout>


    <android.support.v7.widget.RecyclerView xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/askElementRecyclerView" />

</LinearLayout>
